updated at: 2023-04-25 17:13, 「Easy-Tongue」VRChatアバター向け舌パーツ - ぬこみや⑨V.M.C - BOOTH

--- a/VRChat/89/1181889.html
+++ b/VRChat/89/1181889.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "yC5KWYpdwtF5L2Zoar0Ou7/LmxmH9dIgNT5qyyDwcdg="></script>
+    "o3mxGDE2nIClXuSc5468oDaWRpljDonmATXDiCblV7k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"「Easy-Tongue」VRChatアバター向け舌パーツ","description":"[後付タイプのお手軽ベロ \"Easy Tongue\"]\nポリゴン数672、ボーン数4本のアバターに後付できる舌パーツです。\nアニメ系モデルに違和感ない程度に簡略化された馴染みやすい仕上がりです。\n\n●更新履歴\n1/16 …　配布開始\n\n●プランに関して\nフリープラン、ブースト用プランで内容物に違いはありません。基本的にはフリープランをご利用下さい。\nブーストして下さる方はブースト用プランをご利用下さい。\n\n\n●使い方サンプル\nhttps://twitter.com/nek0_suke_vr/status/1085482048469364736","url":"https://booth.pm/ja/items/1181889","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/e6170a80-5060-4a22-8c22-c10792111eba/i/1181889/0fb949a7-c465-44ba-a23b-0c519b29bfd3_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="yC5KWYpdwtF5L2Zoar0Ou7/LmxmH9dIgNT5qyyDwcdg="></script>
+    nonce="o3mxGDE2nIClXuSc5468oDaWRpljDonmATXDiCblV7k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,10 +182,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1181889/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              420
+                              421
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1181889/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              420
+                              421
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
