updated at: 2023-04-25 17:13, 山岳猟兵用アイスピッケル VRchat - nabesuke - BOOTH

--- a/VRChat/25/1181825.html
+++ b/VRChat/25/1181825.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Da6ObO/jpjGeCUrem5HLSeMRuiY7wWjFcuMLm42WsvM="></script>
+    "YHmxBMMTOZCUW6L8dyQrbeM1nWOaskpOjaQUjneKDG0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"山岳猟兵用アイスピッケル VRchat","description":"内容物\n△566\n.Texture2枚\n.FBXファイル\n.readme\n\n自分用に作った物ですが、欲しい方がいらっしゃればどうぞ持って行って!\n彫刻やアドラーは入っておりません\n多少細部の異なりがあります\n\nWehrmacht Gebirgsjäger Eispickel\nドイツ国防軍　山岳猟兵用氷斧\n\n","url":"https://booth.pm/ja/items/1181825","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/09a829b3-704e-457f-9111-01930f512f81/i/1181825/489257df-b105-4aaf-a090-225f84271886_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Da6ObO/jpjGeCUrem5HLSeMRuiY7wWjFcuMLm42WsvM="></script>
+    nonce="YHmxBMMTOZCUW6L8dyQrbeM1nWOaskpOjaQUjneKDG0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1181825/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               67
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1181825/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               67
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
