--- a/VRChat/06/1181406.html
+++ b/VRChat/06/1181406.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "+I/lLadIU9wEkCJdDZpflAD5ZD6pChO31Es/hgklhnU="></script>
+    "c12G9Kd/4MJJ1dHeTN5uhpeyIFfc5pf4Q2IOldy4wyE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"小便器","description":"VRChat向けオリジナル3Dモデル「小便器」です\n\n- 仕様\n\n・三角ポリゴン数　19044\n・マテリアル数2　（Standard Shaderを使用しています）\n\n\n- 同梱内容\n\n・syoubenki.fbx\nモデルデータです。\n\n・Syoubenki.unitypackage\nVRChat用アバターの設定がされたunityパッケージです\n本パッケージを使用する際はVRCSDKをインポートしてから本パッケージをインポートしてください。インポートした後は、Syoubenkiフォルダ直下にあるシーンファイル(Syoubenki.unity)を開いてください。\n\n\n- License\n\n　　　DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE\n　　　　　　　　Version 2, December 2004\n\n Copyright (C) 2004 Sam Hocevar \u003csam@hocevar.net\u003e\n\n Everyone is permitted to copy and distribute verbatim or modified copies of this license document, and changing it is allowed as long as the name is changed.\n\nDO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE TERMS AND CONDITIONS FOR COPYING, DISTRIBUTION AND MODIFICATION\n\n  0. You just DO WHAT THE FUCK YOU WANT TO.\n\n\n- 更新履歴\n\n2019/2/6　リリース\n","url":"https://booth.pm/ja/items/1181406","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/11d082f4-13bc-482b-b48f-07e27703a8aa/i/1181406/76a2af8a-3f3e-438a-996f-35befee43690_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+I/lLadIU9wEkCJdDZpflAD5ZD6pChO31Es/hgklhnU="></script>
+    nonce="c12G9Kd/4MJJ1dHeTN5uhpeyIFfc5pf4Q2IOldy4wyE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1181406/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               237
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1181406/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               237
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
