--- a/VRChat/68/1181168.html
+++ b/VRChat/68/1181168.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "RzTRzumXvmw4ZmqD3EryC/ucvXpG6hiayzimzX9lMlM="></script>
+    "msVsI3KUIdmcBgaumIXFFcKuASTKynbpo7u1IRVIDFI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"『VRoid\u0026セシル変身』ブーツ（ブラウン、ブラック、レッド）３点セット『ワンピース用テクスチャ』","description":"『VRoid用テクスチャ』ワンピース用ブーツがなんと！！\n３点セットでお得なお値段！？\n是非ご利用ください！！\n（ブラックは軍服に同封してある物と同じものとなっておりますのでお気を付けください。）\n\n【購入した商品の利用は自由です】\n『再配布』することは禁止ですが、それ以外の制限はとくにございません。\nVRoid制作はもちろん。\nUnity経由でVRchatへ。\n変換してMMDやその他への流用。\nゲーム制作や改変しての使用などなど。\nご自由にお使いください！\nクレジット表記は出来ればお願いしたいです。\n何か理由があって入れれない場合は大丈夫です。\n\nあなたの理想を形に。\n『犬子屋』はVRoid活動を応援しています。\n\n追記。\nショップ、ツイッターのフォロー、ハートマークのプッシュをお願いします！\nリツイートやいいねも待ってます！\n制作者の励みになります！\n↓こちらだよ(≧∇≦)\nhttps://twitter.com/Isekaiinuko?s=09\n\nそれとツイートの際は是非\n#犬子屋 と書いてツイートしください。\n拝見させていただきます！","url":"https://booth.pm/ja/items/1181168","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/f22bc1b2-b53f-45cb-ab46-6930cde3bab7/i/1181168/740fb2e4-8064-41d0-86d3-ba975b208550_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="RzTRzumXvmw4ZmqD3EryC/ucvXpG6hiayzimzX9lMlM="></script>
+    nonce="msVsI3KUIdmcBgaumIXFFcKuASTKynbpo7u1IRVIDFI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +156,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1181168/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               218
@@ -169,14 +171,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1181168/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               218
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
