--- a/VRChat/03/1179303.html
+++ b/VRChat/03/1179303.html
@@ -71,9 +71,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -103,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "++MGT+V+BHK2ZJ4Ya5SeUNOHrxF/+o51WLruCS4d3v4="></script>
+    "5ZLnVOkypSz3QzkgERXv5yQ30iynlybS+Z/Ts3LuffM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【オリジナル３Dモデル】　ミドラ族の少女","description":"【オリジナル3Dモデル】　ミドラ族の少女　紹介文\n製作者：餓死谷　独郎\n\n※以下の商品説明・利用規約をご確認の上、ご了承の方のみご購入ください\n\n【商品説明】\n\n主にVRChatでのアバターとしての利用を想定しています。\n本モデルはVRCの仕様変更に対応する形でアップデートされる可能性があります、ご了承ください。\n\nポリゴン数：△18004\n\nメッシュ数：１\nテクスチャ数：３\nマテリアル数：３\nシェイプキー数：８\n\nAvatarPerformance：Good\nEye tracking：非対応(対応予定)\n\nオリジナルカスタム歩行アニメーション二種付属\nアニメーションオーバーライド設定済み\nスキニング済み\n\nVRCでの動作はデスクトップ及び３点トラッキングについては動作確認済み、フルトラッキングは非推奨です。\n\nシェーダー：Cubud Paradox /Flat Lit Toon (Outline Mode Tinted)推奨、別途導入のこと\nStandard、Unlitでも可\n\n【導入方法】\n\n1.unity 2017.4.15f1をダウンロードし、プロジェクトを作成\n2.VRCSDKを公式からダウンロードしインポート\n3.unitypackageをインポート\n4.Prefabファイルをシーンに追加。\nVRChatSDKよりShow Build Control Panelを起動しアップロード\n\n詳しい導入方法が分からない場合は下記製作者Twitterにご連絡ください。↓\nhttps://twitter.com/gasyadokuro10?lang=ja\n\n\n【利用規約】\n\n・本モデルを購入した時点で本利用規約に同意したものとします。\n\n・利用規約は予告なく変更される場合があり、常に最新のものが適用されます。\n\n・本モデルに関するデータ及び改変したデータが持つ著作権は制作者餓死谷　独郎に帰属します。\n\n・制作者、餓死谷　独郎は本データ使用によるいかなるトラブル、損失に一切責任を負いません。\n\n商業利用\n商業・非商用どちらも可能です。主にVRChatでの利用を想定していますがそのほかのゲーム製作、映像制作などのデジタルコンテンツにも利用可能です\n\n改変\n改変は許可します、ただしテクスチャに関してはpsdファイルが付属していないためご不便をおかけします(追加予定)\n\nR-18、R-18Gコンテンツへの利用\n基本的に制限はありません\n\n※禁止事項※\n・本モデルとそれに関連したデータの再配布及び販売を禁止します、本商品に含まれるデータを改変したものを再配布、販売することも禁止します。\n\n・公序良俗に反する行為や目的、政治、宗教活動、他者に対する誹謗中傷目的での使用を禁止します。\n\nVRChat上で本モデル、改造モデルのアバターペデスタルの設置・利用を禁止します、またアバターコピーができる状態にして利用することを禁止します。\n\n\n制定日\n2019年1月15日\n\n\n更新履歴\n2019/1/15\n・販売開始\n\n\n","url":"https://booth.pm/ja/items/1179303","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1490"},"image":"https://booth.pximg.net/c/620x620/3f0adcc5-907c-4ee2-ab3c-73346f195428/i/1179303/37e56c9e-bb8a-42d3-ac73-60c51d315f56_base_resized.jpg"}
     </script>
@@ -116,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="++MGT+V+BHK2ZJ4Ya5SeUNOHrxF/+o51WLruCS4d3v4="></script>
+    nonce="5ZLnVOkypSz3QzkgERXv5yQ30iynlybS+Z/Ts3LuffM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -140,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +153,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -195,7 +195,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1179303/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               31
@@ -210,14 +210,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1179303/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               31
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
