--- a/VRChat/27/1179327.html
+++ b/VRChat/27/1179327.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "4zkvJQMxl5o0d1IfZj4gwojoF9T6KEfH90a0L0Wwf74="></script>
+    "6K9qyHJPrRpCCshpm6Pb3ru3XfdNsAOhcCP9dbZ0LmY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【 VRChat小道具】 ハロウィン リボン","description":"◆構成\nfbx\npng\nunitypackage\n\n◆規約\n2次配布 以外には 何でもオッケー\n\n◆注意\n本商品は、シェーダーが含まれていません。\n\n◆コンタクト\nDiscord - uNeet#4844","url":"https://booth.pm/ja/items/1179327","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/10729499-4006-459a-9c53-6fb101167cb3/i/1179327/8587fc4a-b17f-4294-a421-4c5317292c5a_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="4zkvJQMxl5o0d1IfZj4gwojoF9T6KEfH90a0L0Wwf74="></script>
+    nonce="6K9qyHJPrRpCCshpm6Pb3ru3XfdNsAOhcCP9dbZ0LmY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1179327/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               366
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1179327/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               366
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
