--- a/VRChat/24/1178924.html
+++ b/VRChat/24/1178924.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "0VZC8Y8xwzmtfav2q4hB0k+7SJ/ewz6+Vq5/Qjaznyg="></script>
+    "eh5/sWM/xz6at2KY12xst6KYfzC3MYEJDx/27cb7xTw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ブーツセット","description":"なんか神聖的なブーツと鉄的なブーツです。\nワンピースの靴テクスチャとなります。\n","url":"https://booth.pm/ja/items/1178924","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/832fe23e-6abb-4cdc-9ac5-102b9173c10f/i/1178924/2fd147a9-de14-4557-8174-31f1fb94e4a2_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0VZC8Y8xwzmtfav2q4hB0k+7SJ/ewz6+Vq5/Qjaznyg="></script>
+    nonce="eh5/sWM/xz6at2KY12xst6KYfzC3MYEJDx/27cb7xTw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -151,7 +153,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1178924/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               8
@@ -166,14 +168,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1178924/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               8
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
