updated at: 2023-04-25 17:17, 【VRChat向け】対人狙撃銃「ドレッドノート」 - D&#39;s Store - BOOTH

--- a/VRChat/23/1173223.html
+++ b/VRChat/23/1173223.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "e/Vx7HNapxrO4PkZ0wGUjrP1aelgi5pv8wtb7AzHjMQ="></script>
+    "Spq7T7tiyPl8CDHFSGMk3cT6aVgelabIUZI1bCiUNxY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】対人狙撃銃「ドレッドノート」","description":"ドレッドノート　紹介文\n\nVRChatでの使用を想定した、創作銃の「ドレッドノート」です。\n\nアバターに持たせるもヨシ、ワールドで使用するもヨシです。\n\n人に向けたりする際は相手を不快にさせないよう、確認を取ったうえでお願いします。\n\n※有料版と無料版で中身に違いはありません。\n\nポリゴン数：△5570","url":"https://booth.pm/ja/items/1173223","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/da4e30e9-04a4-47e9-a425-ac59c0d6a53d/i/1173223/01ab3b69-4995-4a9e-9ac0-d64659944ccc_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="e/Vx7HNapxrO4PkZ0wGUjrP1aelgi5pv8wtb7AzHjMQ="></script>
+    nonce="Spq7T7tiyPl8CDHFSGMk3cT6aVgelabIUZI1bCiUNxY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1173223/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               95
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1173223/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               95
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
