updated at: 2023-04-25 17:17, 彗星のブローチ(Comet Brooch) ※Old Data - マルンのお店 - BOOTH

--- a/VRChat/78/1176578.html
+++ b/VRChat/78/1176578.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "JEUoDUc6r/1Yat2BvrzRR6EqF6jKynd5rIOLEeqABPw="></script>
+    "6ifQEM5RafG523NoYBbpIo2n0xUPz2hqB4aI+NdzmfI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"彗星のブローチ(Comet Brooch) ※Old Data","description":"Marun Original Avatar Series\nAccessory No.004 -Comet Brooch-\n\n「彗星のブローチ」\nスピカの妹であるノエルが、スピカのために作ったブローチ。\n姉思いな彼女の、強力な魔力が込められている。\n\n\n●内容物\n・FBX１つ\n・テクスチャー１枚\n・UV展開図１枚\n・Prefabs入りUnitypackage１つ\n・Readme１枚\n\n●利用規約\n・再配布禁止。\n・自作と偽る行為の禁止。\n・その他､改変等あらゆる行為の許可。\n\n●注意事項\n・本データ、および3DモデルはVRChatでの使用を想定しています。\n・本データの著作権は作者(焔霊マルン)に帰属するものとします。\n・本データを使用した事によるトラブルに関して作者は一切の責任を負いません。\n\n△ポリゴン数2656 マテリアル数2 テクスチャー1枚\n\n作者への連絡先 → https://twitter.com/Marun_Spirit","url":"https://booth.pm/ja/items/1176578","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8ff6fcbd-9bfc-47c9-869c-9f7e8280f01b/i/1176578/1e99d50a-eab2-425b-abc8-277093e5e419_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="JEUoDUc6r/1Yat2BvrzRR6EqF6jKynd5rIOLEeqABPw="></script>
+    nonce="6ifQEM5RafG523NoYBbpIo2n0xUPz2hqB4aI+NdzmfI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1176578/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               36
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1176578/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               36
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
