updated at: 2023-04-25 17:18, Translator4VRC - MINAMI - BOOTH

--- a/VRChat/51/1175951.html
+++ b/VRChat/51/1175951.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "2bfgIqoJ6YXtc3OKaHb8tn8/jn6/Bj9nbE7LU3I1LbI="></script>
+    "tvBa69YkWK1i8P3KFp3vhnm0DjYNdafQMUeUms81Eho="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Translator4VRC","description":"VRChatでVRのカメラかF12キーで外国語の文章のスクリーンショットを撮ると画像から文字を認識し翻訳して表示するアプリです。\nVOICEROID+, VOICEROID2, 音街ウナTalk Ex, CeVIOを使って翻訳結果を読み上げることができます。音声合成ソフトを所持していなくてもGoogleまたはWindowsの読み上げ機能が使用できます。\n\nアップデート情報\n2019年7月27日\n・通信量を20%削減\n・翻訳中，再生中に撮影されたスクリーンショットも翻訳するように変更\n\n対応OS\nWindows 10 64bit\n\n不具合があれば@minami_vrに報告をお願いします\nhttps://twitter.com/minami_vr\n\nTranslator4VRCは以下のライブラリを使用しています\nNAudio https://github.com/naudio/NAudio/blob/master/license.txt\n\nTTSController\nhttps://github.com/ksasao/TTSController/blob/master/LICENSE\n\nSpecial Thanks\nbootjp様","url":"https://booth.pm/ja/items/1175951","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/de8de267-62ad-45e9-88e3-e15de9a05583/i/1175951/881c1e35-83d7-4bf1-9df7-5347aeb31536_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="2bfgIqoJ6YXtc3OKaHb8tn8/jn6/Bj9nbE7LU3I1LbI="></script>
+    nonce="tvBa69YkWK1i8P3KFp3vhnm0DjYNdafQMUeUms81Eho="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1175951/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               181
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1175951/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               181
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
