updated at: 2023-04-25 17:18, 【VRC】雑な掛け軸っぽいやつ(76ポリゴン) - 仮想DustBox.-Virtual DustBox- - BOOTH

--- a/VRChat/28/1175628.html
+++ b/VRChat/28/1175628.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "uITXNCtcBeLK1MnsJzoi7j4y10jFM2w3zUTg4WgIWhY="></script>
+    "2nB8MSPtj4gOR1oAdxMGsUbyAh1wIFwZ5iCCaT9Y51I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRC】雑な掛け軸っぽいやつ(76ポリゴン)","description":"なんか和柄の掛け軸っぽいやつです。\nどうしても自分で作るのが面倒なときにどうぞ。\n\n自作発言、再配布は不許可\nクレジットとか不要です。\n\n使用報告がもらえると喜びます","url":"https://booth.pm/ja/items/1175628","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/2e38c3c4-71ff-4201-8d0d-11df6e2b715b/i/1175628/7f88a42b-8792-41cb-983f-f04790d67faa_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="uITXNCtcBeLK1MnsJzoi7j4y10jFM2w3zUTg4WgIWhY="></script>
+    nonce="2nB8MSPtj4gOR1oAdxMGsUbyAh1wIFwZ5iCCaT9Y51I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1175628/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               16
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1175628/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               16
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
