updated at: 2023-04-25 17:19, 【3Dモデル】ひるね屋 - へアセットVer.1 - ひるね屋 - BOOTH

--- a/VRChat/47/1174147.html
+++ b/VRChat/47/1174147.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "hY5EO8vKZENqewU5WDMZxwPpZtoxGs7jNTM4jefXxPw="></script>
+    "X8o3APBdRGSo5RnlaLliKxMxXUeV2PALed5hZVEdRZM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dモデル】ひるね屋 - へアセットVer.1","description":"●モデル説明\n【3Dモデル】ひるね屋 - へアセットVer.1\n制作者：ひるね\n\nマテリアル数：1個\nポリゴン数\nTypeA △8641\nTypeB △9303\nTypeC △7429\n\nVRChatでの利用を想定したヘアセットモデルです\nむた様制作の3Dモデル「キッシュ」(https://booth.pm/ja/items/954376)\nの頭部に合うように制作してありますので、キッシュちゃんと組み合わせる場合は調整なしで利用できます\n\n※モデル説明の下に利用規約が記載されているので必ず目を通してから購入をお願いします\n\n\n●内容物\n\n・FBXファイル（6種）\nTypeA,B,Cの右目隠れと左目隠れの6種\n\n・Texファイル（png14種、psd1種）\n\n・Hirune Hairset Ver.1.unitypackeage\n上記のデータを同梱したunitypackeageです\nダイナミックボーンの数値、マテリアル（MnMrShader1_3）など設定済みのPrefabを同梱してあります\n※インポートする前にダイナミックボーンアセット、MnMrShader1_3をインポートしないと設定が反映されません\n\n・Readme.txt\n利用規約のテキストです\n下部にも同じ内容の利用規約文を記載しているので、必ず目を通してから購入をお願いします","url":"https://booth.pm/ja/items/1174147","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/4d603a5d-0611-4e3c-833c-41454379f04e/i/1174147/1b91f35a-2c5a-4dca-8775-edc1a5dfbda8_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hY5EO8vKZENqewU5WDMZxwPpZtoxGs7jNTM4jefXxPw="></script>
+    nonce="X8o3APBdRGSo5RnlaLliKxMxXUeV2PALed5hZVEdRZM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -123,6 +120,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -137,7 +136,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -178,7 +178,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1174147/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               214
@@ -193,14 +193,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1174147/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               214
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
