updated at: 2023-04-25 17:20, 【VRChat】Gz.9 .556 .762　A4　オリジナル３Dモデル - Gｚ INDUSTRIES - BOOTH

--- a/VRChat/70/1376570.html
+++ b/VRChat/70/1376570.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "0LF1JG3jmCisAmN8hEbeqkG+zBTWGiISImVAtq99fNM="></script>
+    "9YCM0R3kGfcYy4wlsEArC0QbSUwhEedjA+SE6lNwA88="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat】Gz.9 .556 .762　A4　オリジナル３Dモデル  ","description":"VRChat向けのオリジナル3D銃です。\n\n内容\n\nfbxファイル\nunitypackage\nreadme.txt\nテクスチャ\n\n\n\n\n各種パーツはシェイプキーで調整できます。\n\n\n\n\n\n改変、再配布について\n当モデルの改変、VRChatへのアップロードは自由です。\nただし、モデルの改変の有無にかかわらず再配布できる形でのアップロードはご遠慮ください。\n改変されたモデルの著作権はGarazooに帰属し、このモデルを使用して起きた損害や問題については責任を負いません。\nこの規約は今後変更される可能性があります。\n\nなにかありましたらこちらまでお願いします。\n\nhttps://twitter.com/GARAZOO1\n\nxx更新履歴ｘｘ\n2019/05/22 Gz556モデルにシェイプキーを追加した物をつくりました。、本体の長さ、サイドレイルの追加、など調整できるようになりました。\n\n2019/05/26 Gz9モデルにシェイプキーモデルを追加\n\n2020/01/31 GzモデルをA4にアップグレードしました。","url":"https://booth.pm/ja/items/1376570","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/32923bd1-d9f6-4458-b436-a0b083014965/i/1376570/2077c6ee-ab05-48e5-9ea0-2472f7c4b9d9_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0LF1JG3jmCisAmN8hEbeqkG+zBTWGiISImVAtq99fNM="></script>
+    nonce="9YCM0R3kGfcYy4wlsEArC0QbSUwhEedjA+SE6lNwA88="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1376570/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               52
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1376570/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               52
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
